Changes-in-connect-wallet-fixes-alignment-and-border-radius

--- a/src/css/style-dark.css
+++ b/src/css/style-dark.css
@@ -31,6 +31,7 @@ body{
   background-position: center;
   background-repeat: no-repeat;
 }
+
 .img-container {
   position: relative;
   overflow: hidden;
@@ -596,7 +597,7 @@ h1, h4 {
 }
 .bottom-middle-img {
   position: absolute;
-  bottom: -45%; 
+  bottom: 35%; 
   left: 50%; 
   transform: translateX(-50%);
   width: 80px;
@@ -607,7 +608,7 @@ h1, h4 {
   width: 80%;
   margin-left: 35px;
   border: 1px solid rgba(255, 255, 255, 0.2);
-  border-radius: 25px;
+  border-radius: 20px;
   background: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(18px); 
   padding: 20px; 
@@ -631,6 +632,7 @@ h1, h4 {
   width: 35px;
   height: 35px;
   text-align: center;
+  margin-top: 25px;
 }
 .user-badge{
   background: linear-gradient(108deg, #000046 -0.79%, #008bb2 100%);
